--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 h1 { 
-    font-family:"Arvo";
+    font-family:"Goudy Bookletter 1911";
 	font-weight:normal;
 	font-size: 55px;
 	text-align: center;
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-   font-family:"Arvo";
+   font-family:"Goudy Bookletter 1911";
    font-weight: normal;
    font-size: 40px;
    text-align: center;
@@ -34,7 +34,7 @@ h2 {
 }
 
 h3 {
-   font-family: Oswald;
+   font-family: "Goudy Bookletter 1911";
    font-weight: normal;
    font-size: 16px;
    text-align: center;
@@ -49,8 +49,8 @@ h3 {
 .center { margin: 0 auto; }
 .content{ margin: 0 auto; width: 960px; }
 .clear { clear: both; }
-a.lpanel { float: left; color: #e1e1e1; font-size: 12px; font-family:"Wellfleet"; text-decoration: none; margin: 7px 11px; }
-a.rpanel { float: right; color: #e1e1e1;  font-size: 12px; font-family:"Wellfleet"; text-decoration: none; margin: 7px 11px; }
+a.lpanel { float: left; color: #e1e1e1; font-size: 12px; font-family:"Goudy Bookletter 1911"; text-decoration: none; margin: 7px 11px; }
+a.rpanel { float: right; color: #e1e1e1;  font-size: 12px; font-family:"Goudy Bookletter 1911"; text-decoration: none; margin: 7px 11px; }
 
 a.lpanel:hover{ color: #fff; }
 a.rpanel:hover{ color: #fff; }
@@ -66,7 +66,7 @@ a.rpanel:hover{ color: #fff; }
 }
 
 #nav { width: 410px; float: right; margin-top: 20px; }
-#logo a { color: #fff; text-decoration: none; float: left; font-size: 30px; margin-top: 20px; color: #fff; font-family:"Wellfleet"; font-weight: bold; }
+#logo a { color: #fff; text-decoration: none; float: left; font-size: 30px; margin-top: 20px; color: #fff; font-family:"Goudy Bookletter 1911"; font-weight: bold; }
 #nav ul{
 	list-style: none;
 	display: block;
@@ -80,7 +80,7 @@ a.rpanel:hover{ color: #fff; }
 	padding-left: 21px;
 }
 
-#nav li a { color: #fff; opacity:0.6; font-size: 16px; text-decoration: none; font-family: 'Wellfleet'; }
+#nav li a { color: #fff; opacity:0.6; font-size: 16px; text-decoration: none; font-family: 'Goudy Bookletter 1911'; }
 #nav li a.active { color: #fff; opacity:1; border-bottom: 2px solid #fff; }
 #nav li a:hover { color: #fff; opacity:1;  }
 
@@ -95,15 +95,18 @@ a.rpanel:hover{ color: #fff; }
   text-align: left;
   margin: 50px auto;
 }
+
+.report {   
+ font-family: 'Goudy Bookletter 1911', serif;
+   font-weight: normal;
+   font-size: 20px;
+  text-align: left;
+  margin: 50px auto;
+}
    
- .author_name_white { font-family:"Wellfleet";  margin: 70px 0 0 75px; color: #fff; font-size: 20px; }  
- .author_name_gray { font-family:"Wellfleet";  margin: 70px 0 0 75px; color: #94a4a4; font-size: 20px; }  
- .quotes_container { width: 800px; margin: 0 auto; }
-#christmas_tree { background: url('../img/christmas-tree.png')no-repeat; width: 48px; height: 77px; margin: 0 auto; position: relative; bottom: -35px;}
-#divider { background: url('../img/divider.png')no-repeat; width: 300px; height: 35px; margin: 0px auto 27px auto; }
-#ribbon { background: url('../img/ribbon.png')no-repeat; width: 251px; height: 48px; margin: 0 auto;  display: block; position: relative; top: -38px; }
-#snowflakes1 { background: url('../img/snowflakes.png')no-repeat; width: 24px; height: 21px; margin: 0 auto;  display: block; position: relative; bottom: -54px; left: -102px; }
-#snowflakes2 { background: url('../img/snowflakes.png')no-repeat; width: 24px; height: 21px; margin: 0 auto;  display: block; position: relative; bottom: -33px;  right: -100px; }
+ .author_name_white { font-family:"Goudy Bookletter 1911";  margin: 70px 0 0 75px; color: #fff; font-size: 20px; }  
+ .author_name_gray { font-family:"Goudy Bookletter 1911";  margin: 70px 0 0 75px; color: #94a4a4; font-size: 20px; }  
+ .quotes_container { width: 800px; height: 200; margin: 0 auto; }
 
 
 
@@ -164,7 +167,9 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	background-color: #fff;
 	color: #333333;
 	height: 300px;
-	padding: 200px 0;
+	margin: 0 auto;
+	overflow: hidden;
+	padding: 200px 100px;
 }
 
 #slide5{
@@ -175,10 +180,3 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	color: #fff;
 	background-size: cover;
 }
-
-
-/*= FOOTER 
---------------------------------------------------------*/
-
-#copyright  { color: #fff; font-family:"Wellfleet";  font-size: 14px; margin-top: 100px; text-align: center;  }
-#copyright  a { text-decoration: none; color: #fff;  }
