--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,14 @@ h3 {
 	z-index: 1;
 	position: relative;
 }
-
+#contact
+	{
+	}
+	
+		#contact footer
+		{
+			font-size: 0.9em;
+		}
 
 
 .center { margin: 0 auto; }
