--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,7 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 	color: #fff;
 	background-size: cover;
 }
+
+.team {
+	height: 100px;
+}
